--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
   <body>
     <menu>
-      <strong>Twist</strong> |
+      <%= link_to root_url(subdomain: nil) do %>
+        <strong>Twist</strong>
+      <% end %> |
       <% if user_signed_in? %>
         Signed in as <%= current_user.email %>
         <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
